fix(tasks): correct completed graph causing scrollbars

--- a/ichrisbirch/app/static/css/main.css
+++ b/ichrisbirch/app/static/css/main.css
@@ -901,13 +901,10 @@ nav a:hover {
   margin-left: 0px;
 }
 
-#completed-averages {
-  margin-bottom: 100px;
-  text-align: center;
-}
-
-#graph {
-  text-align: center;
+.completed-task-graph {
+  width: 80%;
+  margin: auto;
+  background-color: var(--clr-gray-800);
 }
 
 .task-footer {
